--- a/haskoin-core/haskoin-core.cabal
+++ b/haskoin-core/haskoin-core.cabal
@@ -98,6 +98,7 @@ library
                        , vector >= 0.12 && < 0.13
                        , secp256k1 >= 0.5 && < 0.6
                        , entropy >= 0.3 && < 0.4
+                       , cryptoconditions
     default-language:    Haskell2010
 
 test-suite haskoin-core-test
